--- a/Waveform/Views/Home/Index.cshtml
+++ b/Waveform/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         <br />
         <div class="addSongs" style="flex-direction: column; align-items: center;">
             <h1>Your Waveform library is empty.</h1><br />
-            <h2>To do so, press "Add Songs" below.</h2>
+            <h2>To start, click on "Add Songs" below.</h2>
         </div>
     }
 
