--- a/Waveform/Views/Home/Delete.cshtml
+++ b/Waveform/Views/Home/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="index__header">
-    <h1>Deleting: @Model.Name</h1>
+    <h1>Deleting: <span title="@Model.Name">@Model.Name</span></h1>
     <a asp-action="Index">
         <span class="material-icons">library_music</span>
         &nbsp;&nbsp;My songs
