--- a/Waveform/Views/Playlist/Create.cshtml
+++ b/Waveform/Views/Playlist/Create.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 <div class="create__playlist mt-3">
-    <img src="~/lib/images/default.png" alt="no-artwork" />
+    <img id="playlist__image" src="~/lib/images/default.png" alt="artwork" />
     <div class="col-md-6 ml-3">
         <form asp-action="Create" method="post" enctype="multipart/form-data">
 
@@ -35,6 +35,8 @@
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
                 <input asp-for="Image" type="file" accept=".png, .jpg, .jpeg" id="image" class="form-control" />
+                <span class="text-danger" style="display: none;" id="size">Only images under 30MB are accepted.</span>
+                <span class="text-danger" style="display: none;" id="type">Please select a .png, .jpg or .jpeg image.</span>
             </div>
 
             <input asp-for="Playlist.Songs" id="songs" type="hidden" />
@@ -87,22 +89,29 @@
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
     <script>
-        let ok = false;
+        let ok = 0;
         let formats = ['.png', '.jpg', '.jpeg'];
 
         $('#image').change(function (e) {
-            ok = false; 
-            formats.forEach(format => {
-                ($('#image').val().substring($('#image').val().lastIndexOf('.')) == format) && (ok = true);
-            });
+            ok = 0;
 
-            $("img").attr('src',
+            formats.some(format => {
+                if ($('#image').val() !== '') {
+                    if ($('#image').val().substring($('#image').val().lastIndexOf('.')) === format)
+                        ok = e.target.files[0].size < 30000000 ? 2 : 1;
+                } else ok = 2;
+            });
+            
+            $('#size').css('display', ok === 1 ? 'block' : 'none');
+            $('#type').css('display', ok === 0 ? 'block' : 'none');
+
+            $('#playlist__image').attr('src',
                 e.target.files[0] !== undefined ? URL.createObjectURL(e.target.files[0]) : '/lib/images/default.png'
             );
         });
 
         $('form').submit(function (e) {
-            $('#userId').val('@UserManager.GetUserId(User)');
+            ok === 2 ? $('#userId').val('@UserManager.GetUserId(User)') : e.preventDefault();
         });
 
         function addSong(id, name, date) {
