Empty playlists potential crashes now fixed.

--- a/Waveform/Views/Home/Add.cshtml
+++ b/Waveform/Views/Home/Add.cshtml
@@ -21,7 +21,7 @@
 
 <div class="add__song mt-3">
     <div class="song__info">
-        <h2>Select the song to add from your computer.</h2><br />
+        <br /><h2>Select the song to add from your computer.</h2><br />
         <form asp-action="Add" method="post" enctype="multipart/form-data">
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
