--- a/Waveform/Views/Playlist/Create.cshtml
+++ b/Waveform/Views/Playlist/Create.cshtml
@@ -57,33 +57,43 @@
     <hr />
 </div>
 
-<div class="songs mt-4">
-    <h3 class="mb-4">Your library</h3>
-    <div class="songs__header">
-        <span>#</span>
-        <span>Title</span>
-        <span>Date added</span>
-    </div>
-    <hr />
-   @foreach (var song in Model.Songs)
-    {
-        string audio = String.Format("data:audio/*;base64,{0}", Convert.ToBase64String(song.Audio));
-        <div class="songs__track">
-            <span class="songs__track__count">@song.Id</span>
-            <span class="songs__track__title">
-                <span>
-                    <span>@song.Name</span>
-                </span>
-            </span>
-            <span class="songs__track__added">
-                <span class="material-icons-round" style="font-size: 16px;" onclick="addSong(@song.Id, '@song.Name', '@song.DateAdded')">
-                    add_circle_outline
-                </span>
-                <span>@song.DateAdded.Replace("/", ".").Replace(" ", " - ").Remove(song.DateAdded.Length - 1)</span>
-            </span>
+@if (Model.Songs != null && Model.Songs.Any())
+{
+    <div class="songs mt-4">
+        <h3 class="mb-4">Your library</h3>
+        <div class="songs__header">
+            <span>#</span>
+            <span>Title</span>
+            <span>Date added</span>
         </div>
-    }
-</div>
+        <hr />
+       @foreach (var song in Model.Songs)
+        {
+            string audio = String.Format("data:audio/*;base64,{0}", Convert.ToBase64String(song.Audio));
+            <div class="songs__track">
+                <span class="songs__track__count">@song.Id</span>
+                <span class="songs__track__title">
+                    <span>
+                        <span>@song.Name</span>
+                    </span>
+                </span>
+                <span class="songs__track__added">
+                    <span class="material-icons-round" style="font-size: 16px;" onclick="addSong(@song.Id, '@song.Name', '@song.DateAdded')">
+                        add_circle_outline
+                    </span>
+                    <span>@song.DateAdded.Replace("/", ".").Replace(" ", " - ").Remove(song.DateAdded.Length - 1)</span>
+                </span>
+            </div>
+        }
+    </div>
+} else
+{
+    <br />
+    <div class="addSongs" style="flex-direction: column; align-items: center;">
+        <h1>Your Waveform library is empty.</h1><br />
+        <h2>To start, <a asp-action="Add" asp-controller="Home">add some songs</a>.</h2>
+    </div>
+}
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
