--- a/Waveform/Views/Playlist/Create.cshtml
+++ b/Waveform/Views/Playlist/Create.cshtml
@@ -99,7 +99,7 @@
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
     <script>
-        let ok = 0;
+        let ok = 3;
         let formats = ['.png', '.jpg', '.jpeg'];
 
         $('#image').change(function (e) {
@@ -121,7 +121,7 @@
         });
 
         $('form').submit(function (e) {
-            ok === 2 ? $('#userId').val('@UserManager.GetUserId(User)') : e.preventDefault();
+            ok < 2 ? $('#userId').val('@UserManager.GetUserId(User)') : e.preventDefault();
         });
 
         function addSong(id, name, date) {
