Playlist creation bug fix

--- a/Waveform/Views/Playlist/Create.cshtml
+++ b/Waveform/Views/Playlist/Create.cshtml
@@ -121,7 +121,7 @@
         });
 
         $('form').submit(function (e) {
-            ok < 2 ? e.preventDefault()$ : ('#userId').val('@UserManager.GetUserId(User)');
+            ok < 2 ? e.preventDefault() : $('#userId').val('@UserManager.GetUserId(User)');
         });
 
         function addSong(id, name, date) {
